--- a/templates/admin/add_task.html
+++ b/templates/admin/add_task.html
@@ -1,24 +1,22 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-<!-- Add Holiday Modal -->
-<div class="modal fade" id="add_holiday_model" role="dialog" aria-hidden="true" aria-labelledby="addModalToggleLabel" tabindex="-1">
+
+<!-- Add Task Modal -->
+<div class="modal fade" id="add_task_model" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Add Holiday</h3>
+                <h3 class="modal-title">Add Task</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" id="form" action="{% url 'AdminAddHolidays' %}" enctype="multipart/form-data">
+                <form method="post" id="form" action="{% url 'AdminAddProjectTask' add_project_id.id %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
-                        {{ form.holiday_title|as_crispy_field }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.holiday_date|as_crispy_field }}
+                        {{ form.task_title|as_crispy_field  }}
                     </div>
                     <div class="submit-section">
                         <button class="btn btn-primary submit-btn" type="submit">Submit</button>
@@ -28,8 +26,4 @@
         </div>
     </div>
 </div>
-<!-- /Add Holiday Modal -->
-
-
-
-
+<!-- /Add Task Modal -->
