--- a/templates/admin/edit_task.html
+++ b/templates/admin/edit_task.html
@@ -1,2 +1,29 @@
 {% load crispy_forms_tags %}
 {% load static %}
+
+
+<!-- Add Task Modal -->
+<div class="modal fade" id="edit_task_model" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Edit Task</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post" id="form" action="{% url 'AdminEditProjectTask' projectid.id edit_task.id %}" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        {{ form.task_title|as_crispy_field  }}
+                    </div>
+                    <div class="submit-section">
+                        <button class="btn btn-primary submit-btn" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /Add Task Modal -->
