--- a/templates/admin/task-nav.html
+++ b/templates/admin/task-nav.html
@@ -10,7 +10,7 @@
 					<div class="page-header">
 						<div class="row">
 							<div class="col-sm-12">
-								<h3 class="page-title">To view the tasks list, Please select one ...</h3>
+								<h3 class="page-title">To view the tasks list, Please select any one project ...</h3>
 								<ul class="breadcrumb">
 									<li class="breadcrumb-item active">Dashboard/Projects</li>
 								</ul>
